objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accepted_Premium_Hold__c</fullName>
        <label>Accepted Premium Hold?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Age_Days__c</fullName>
        <formula>now() - Porch_Birthday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Reassignment_Email_Batch__c</fullName>
        <label>Account Reassignment Email Batch</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status2__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uncontacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimate Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhausted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted Pro Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call - Pro Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Status_Sub_Status__c</fullName>
        <label>Account Status Sub-Status</label>
        <picklist>
            <controllingField>Account_Status2__c</controllingField>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Live Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Phone Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible Pro Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad experience with onlin marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t give a reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know Porch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t want online marketing/lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has enough jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung up quickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not enough value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired or retiring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied with current solution for lead gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlicensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor BBB Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No email address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted County</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Tag__c</fullName>
        <label>Account Tag</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acquisition_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <description>Count the activity performed by Account owner.</description>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Upsold__c</fullName>
        <label>$ Amount Upsold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Status__c</fullName>
        <label>Applicant Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save for Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attempts_to_Contact__c</fullName>
        <label>Attempts to Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_to_work_in_US__c</fullName>
        <label>Authorized to work in US</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBB_Rating__c</fullName>
        <label>BBB Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBB_URL__c</fullName>
        <label>BBB URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bad_Number_Detail__c</fullName>
        <label>Bad Number Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Begin_Trial_Date__c</fullName>
        <description>A date stamp indicating when a fulfillment pro has begun a premium/fulfillment trial; populated by workflow.  
https://na16.salesforce.com/01Qj00000009xBv</description>
        <label>Begin Trial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Contact__c</fullName>
        <label>Best Time To Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bonding_Amount__c</fullName>
        <label>Bonding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonding_Company__c</fullName>
        <label>Bonding Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonding_Expiration__c</fullName>
        <label>Bonding Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonding_Number__c</fullName>
        <label>Bonding Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Enabled_Date__c</fullName>
        <label>Booking Enabled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <label>Business Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBSA_Fips__c</fullName>
        <label>CBSA Fips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CBSA_Name__c</fullName>
        <label>CBSA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Frequency__c</fullName>
        <label>Call Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Tracking_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Tracking Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Request_Date__c</fullName>
        <label>Cancellation Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Risk_Score__c</fullName>
        <label>Cancellation Risk Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Care_Package_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a care package has been sent.</description>
        <label>Care Package Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_in_Request__c</fullName>
        <label>Check-in Request</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claimed_Auto__c</fullName>
        <formula>IF(NOT(ISBLANK(Claimed_Date__c)),MOD(VALUE(Round_Robin_Number__c),7) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimed_Auto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claimed_Date__c</fullName>
        <label>Claimed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClickToDialPresentedClid__c</fullName>
        <label>ClickToDialPresentedClid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Jobs_Per_Week__c</fullName>
        <description>The number of jobs that a fulfillment pro has committed them-self to every week.</description>
        <inlineHelpText>How many jobs is this pro committed to taking from Porch Partners in a given week?</inlineHelpText>
        <label>Committed Jobs Per Week</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_E_mail__c</fullName>
        <label>Company E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Completed_Pro_Date__c</fullName>
        <label>Completed Pro Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Pro__c</fullName>
        <label>Completed Pro</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contacted__c</fullName>
        <description>For reporting shows number of calls over 15 seconds</description>
        <label>Contacted</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Population__c</fullName>
        <formula>County2__r.County_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Not satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not recommend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DO_NOT_CALL__c</fullName>
        <formula>IMAGE( 
CASE(  Account_Status_Sub_Status__c  , 
&quot;Criminal History&quot;, &quot;servlet/servlet.FileDownload?file=015j0000001OdUt&quot;,  
&quot;/s.gif&quot;), 
&quot;status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DO NOT CALL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <label>Date Cancelled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Delinquent_Case__c</fullName>
        <formula>TODAY()-Last_Delinquent_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Last Delinquent Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_not_answer_Jumpstart__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did not answer Jumpstart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Code_Description__c</fullName>
        <label>Discount Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_from_Lowe_s_Miles__c</fullName>
        <label>Distance from Lowe&apos;s (Miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributed_Date__c</fullName>
        <label>Distributed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <description>Counts number of events on an account</description>
        <label>Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience_Level__c</fullName>
        <label>Experience Level</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook_Account__c</fullName>
        <label>Facebook Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_AM__c</fullName>
        <inlineHelpText>The Go-To Account Manager for Porch Fulfillment services</inlineHelpText>
        <label>Fulfillment AM</label>
        <picklist>
            <picklistValues>
                <fullName>Michael Warsaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parker Viydo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status_Date__c</fullName>
        <label>Fulfillment Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status__c</fullName>
        <inlineHelpText>The stage that this pro in the Fulfillment Process</inlineHelpText>
        <label>Fulfillment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Uncontacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Headshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeowner_Contacts__c</fullName>
        <label>Homeowner Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration__c</fullName>
        <label>Insurance Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jump_Start_Complete_Date__c</fullName>
        <label>Jump Start Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Dashboard_View__c</fullName>
        <label>Last Dashboard View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Delinquent_Case__c</fullName>
        <label>Last Delinquent Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Project_Upload__c</fullName>
        <label>Last Project Upload</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <label>Lead Grade</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Indicates the original lead source of this record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infogroup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Company_Page__c</fullName>
        <label>LinkedIn Company Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunities__c</fullName>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lowe_s_Within_County__c</fullName>
        <label>Lowe&apos;s Within County</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <label>MSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <description>Where did this pro hear about Porch and what caused them to sign up?  This field is meant to help track where our marketing dollars are the most effective.</description>
        <label>Marketing Source</label>
        <picklist>
            <picklistValues>
                <fullName>1-800 Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ads on other websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim My Business Signup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Name Web Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curator Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FB Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google AdWords Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowes Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lowes signup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simonton Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketo_Cookie__c</fullName>
        <label>Marketo Cookie</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend__c</fullName>
        <label>Monthly Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Opportunity_Status__c</fullName>
        <label>Most Recent Opportunity Status</label>
        <summarizedField>Opportunity.Probability</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN(  Phone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp;  Name &amp;
                   &quot;&amp;type=Account&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_CC__c</fullName>
        <label>Name on CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Status__c</fullName>
        <label>Network Status</label>
        <picklist>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Calls_Attempted__c</fullName>
        <label>No. of Calls Attempted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Times_Saved__c</fullName>
        <label>No. of Times Saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Responsive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Responsive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Fulfillment_Date__c</fullName>
        <label>Not Interested Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Projects__c</fullName>
        <label>Number of Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Zip_Codes__c</fullName>
        <label>Number of Zip Codes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarded_Date__c</fullName>
        <label>Onboarded Date</label>
        <type>Date</type>
    </fields>
</CustomObject>